test/compilable/objc/objc_sel_parse.d
/*
void main() {
	__objc_id id = null;
	auto sel = __objc_selector(hello:world:);
}
*/