test/fail_compilation/fail122.d
// 228

void main() {
        y = 2;
        auto x = function(){};
}

